# ndd

./: 1983-bsd-network-disk  COPYING  Makefile.am  README  README.md  acinclude.m4  autogen.sh  config.h.in  configure.ac  minor.c  minor.h  nd_pkt.c  nd_pkt.h  ndd.c  ndd.h
scripts/solaris_smf/: README  install.sh  ndd_svc.xml  remove.sh  svc-ndd
